Fix page-header image alignment

--- a/source/stylesheets/components/_page-header.sass
+++ b/source/stylesheets/components/_page-header.sass
@@ -60,6 +60,10 @@
 
     .page-header__image
       display: block
+      left: 0
+      position: absolute
+      top: 0
+      width: 100%
 
   +grid-media($breakpoint-medium)
     &__image
